[package]
name = "elden-ring-seamless-co-op-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "erscom.rs"
name = "elden-ring-seamless-co-op-manager"

[dependencies]
slint = "0.2.5"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
zip = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"
