[package]
name = "elden-ring-seamless-co-op-manager"
version="0.0.0-this-is-not-the-version"
edition = "2021"

[[bin]]
path = "erscom.rs"
name = "elden-ring-seamless-co-op-manager"

[dependencies]
slint = { version = "1.7", default-features = false, features = ["backend-winit", "renderer-femtovg", "std", "compat-1-2"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
regex = "1"
webbrowser = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"

[build-dependencies]
winresource = "0.1.17"
which = "4.2.5"
